infrastructure/longhorn/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  namespace: storage
spec:
  hostnames:
    - monitoring.homelab.local
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: networking-stack
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: longhorn-frontend
          port: 80
          weight: 1
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              replacePrefixMatch: /
              type: ReplacePrefixMatch
      matches:
        - path:
            type: PathPrefix
            value: /storage/
